--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,8 @@
 // Learn more about theming and how to use it for your application's
 // custom components at https://material.angular.dev/guide/theming
 @use "@angular/material" as mat;
-@import "tailwindcss";
+
+@use "tailwindcss";
 
 * {
   box-sizing: border-box;
