--- a/src/app/components/UI-header/header.html
+++ b/src/app/components/UI-header/header.html
@@ -16,7 +16,7 @@
 
     <mat-menu #menu="matMenu">
         <button mat-menu-item routerLink="/setting">Setting</button>
-        <button mat-menu-item routerLink="/login">Logout</button>
+        <button mat-menu-item (click)="logout()" >Logout</button>
     </mat-menu>
 
 </mat-toolbar>
